<resources>
    <string name="app_name">Movyou</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MovYou</string>
    <string name="nav_header_subtitle">ridwan.hartadi.setiawan@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search movie</string>
    <string name="menu1">Menu 1</string>
    <string name="change_language">Change Language</string>
    <string name="home">Home</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul">Title</string>
    <string name="ridwan_hartadi_setiawan">Ridwan Hartadi Setiawan</string>
    <string name="tanggal_rilis">Release Date</string>
    <string name="share">Share</string>
    <string name="rating">Rating</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="detail">Detail</string>
    <string name="NowPlaying">NOW PLAYING</string>
    <string name="Upcoming">UPCOMING</string>

    <string-array name="language_option">
        <item>English</item>
        <item>Indonesia</item>
        <item>Spanish</item>
    </string-array>
    <string name="appwidget_text">Favourite Movies</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">No Favourite</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="key_daily">key_daily</string>
    <string name="key_release">key_release</string>
    <string name="release_today">%s Release Today</string>
    <string name="key_language">key_language</string>

</resources>
