<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/rel_list">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_weight="0.01">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0."
            android:layout_marginRight="4dp"
            android:id="@+id/tv_no"
            />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:id="@+id/iv_film"
            android:src="@drawable/ic_launcher_background"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_weight="0.7">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="14sp"
            android:textStyle="bold"
            android:id="@+id/tv_judul"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="13sp"
            android:textStyle="normal"
            android:layout_marginTop="8dp"
            android:id="@+id/tv_deskripsi"
            android:maxLines="3"
            android:ellipsize="end"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_rilis"
            android:textSize="13sp"
            android:textStyle="italic"
            android:id="@+id/tv_tanggal"
            android:layout_marginTop="4dp"/>


    </LinearLayout>

</LinearLayout>
</android.support.v7.widget.CardView>