<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_film2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:layout_weight="0.65"
            card_view:srcCompat="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_judul2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/judul"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_deskripsi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/deskripsi"
                android:textSize="13sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_tanggal2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tanggal_rilis"
                android:textSize="13sp"
                android:textStyle="italic" />



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.65"
            android:orientation="horizontal">


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.35"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary">

                <TextView
                    android:id="@+id/btnDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:text="Detail">

                </TextView>


            </LinearLayout>

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                card_view:srcCompat="@drawable/ic_share">

            </ImageView>
        </RelativeLayout>
    </LinearLayout>



</android.support.v7.widget.CardView>